--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
               <li class="proect__item proect__item5">Экспертиза проекта</li>
             </ul>
           </div>
-          <img src="../img/img-7.jpg" alt="" class="proect__img1">
+          <img src="img/img-7.jpg" alt="" class="proect__img1">
         </li>
         <li class="process__item process__item2">
 
@@ -88,7 +88,7 @@
               <li class="resolution__item">согласование с эксплуатирующими организациями</li>
             </ul>
           </div>
-          <img src="../img/img-8.jpg" alt="" class="proect__img2">
+          <img src="img/img-8.jpg" alt="" class="proect__img2">
         </li>
         <li class="process__item process__item3">
           <div class="process__block">
@@ -103,7 +103,7 @@
               <li class="building__item">Благоустройство территории</li>
             </ul>
           </div>
-          <img src="../img/img-9.jpg" alt="" class="proect__img3">
+          <img src="img/img-9.jpg" alt="" class="proect__img3">
         </li>
         <li class="process__item process__item4">
           <div class="process__block">
@@ -116,7 +116,7 @@
               <li class="exploitation__item">Заключение договоров с ресурсоснабжающими организациями</li>
             </ul>
           </div>
-          <img src="../img/img-10.jpg" alt="" class="proect__img4">
+          <img src="img/img-10.jpg" alt="" class="proect__img4">
         </li>
       </ul>
     </section>
